--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,1 +1,64 @@
-<p>employee works!</p>
+<main role="main">
+
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1 class="jumbotron-heading">All Menu</h1>
+            <p class="lead text-muted">Indian Chinese cuisine or Sino-Indian cuisine is the adaptation of Chinese
+                seasoning and cooking techniques to Indian tastes through a larger offering to also include vegetarian
+                dishes.
+                The Indian-style Chinese cuisine is said to have been developed by the small Chinese community that has
+                lived in Kolkata for over a century.</p>
+            <!-- <p>
+                <a href="#" class="btn btn-primary my-2">Add More Items</a>
+
+            </p> -->
+        </div>
+    </section>
+
+    <div class="album py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3" *ngFor="let n of employeeMenu">
+
+                        <section style="text-align: center" *ngIf="n.id==4">Its 4</section>
+                        <h2 style="text-align: center" *ngIf="n.id==12">Its 12</h2>
+                        <h2 style="text-align: center" *ngIf="n.id==24">Its 24</h2>
+
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top"
+                            data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                            alt="Thumbnail [100%x225]" src="{{n.image}}" data-holder-rendered="true"
+                            style="height: 225px; width: 100%; display: block;">
+
+                        <div class="card-body">
+                            <p class="card-text"><strong *ngIf="n!==editSouthItem">{{n.name}}</strong><span
+                                    style="float: right"><strong *ngIf="n!==editSouthItem">${{n.price}}</strong></span>
+                            </p>
+
+                            <div class="d-flex justify-content-between align-items-center">
+                                <input *ngIf="n===editSouthItem" [(ngModel)]="n.name" type="text" (blur)="update()"
+                                    (keyup.enter)="update()">
+
+                                <input *ngIf="n===editSouthItem" [(ngModel)]="n.price" type="number" (blur)="update()"
+                                    (keyup.enter)="update()">
+
+                                
+                                    <!-- <button type="button" class="btn btn-sm btn-outline-warning" title="Edit Menu Item"
+                                        (click)="edit(n)">
+                                        Edit</button>
+                                    <button type="button" class="btn btn-sm btn-outline-danger" title="Delete Menu Item"
+                                        (click)="delete(n)">Delete</button>                                         -->
+                                        <button type="button" class="btn btn-sm btn-outline-primary" title="Add to Your Order"
+                                        (click)="edit(n)">
+                                        Add to Order</button>
+                            
+
+                            </div>
+                        </div>
+                    </div>
+                       
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
