--- a/src/app/indo-chinses-vendor/indo-chinses-vendor.component.html
+++ b/src/app/indo-chinses-vendor/indo-chinses-vendor.component.html
@@ -16,37 +16,235 @@
     
         <div class="album py-5 bg-light">
             <div class="container">
+              
                 <div class="row">
-                        <div class="col-md-4" *ngFor="let n of indoVendors">
-                                <div class="card mb-4 box-shadow">
-                                    <img class="card-img-top"
-                                        data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                        alt="Thumbnail [100%x225]" src="{{n.image}}" data-holder-rendered="true"
-                                        style="height: 225px; width: 100%; display: block;">
-                                    <div class="card-body">
-                                        <p class="card-text"><strong *ngIf="n!==editNorthItem">{{n.name}}</strong><span
-                                                style="float: right"><strong *ngIf="n!==editNorthItem">${{n.price}}</strong></span>
-                                        </p>
-                                        <div class="d-flex justify-content-between align-items-center">
-                                            <input *ngIf="n===editNorthItem" [(ngModel)]="n.name" type="text" (blur)="update()"
-                                                (keyup.enter)="update()">
-                                            <input *ngIf="n===editNorthItem" [(ngModel)]="n.price" type="text" (blur)="update()"
-                                                (keyup.enter)="update()">
-                                            <div class="btn-group">
-                                                <button type="button" class="btn btn-sm btn-outline-warning" title="Edit Menu Item"
-                                                    (click)="edit(n)">
-                                                    Edit</button>
-                                                <button type="button" class="btn btn-sm btn-outline-danger" title="Delete Menu Item"
-                                                    (click)="delete(n)">Delete</button>                                        
-                                            </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top"
+                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="assets/images/vodka.jpg" data-holder-rendered="true"
+                                style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <p class="card-text">Vodka -- $ 7.00</p>
+                
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                    </div>
+                                    <!-- <small class="text-muted">9 mins</small> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top"
+                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="assets/images/frappe.jfif" data-holder-rendered="true"
+                                style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <p class="card-text">Frappe -- $ 9.00</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                    </div>
+                                    <!-- <small class="text-muted">9 mins</small> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top"
+                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="assets/images/bubbletea.jpg" data-holder-rendered="true"
+                                style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <p class="card-text">Bubble Tea -- $ 7.50</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                    </div>
+                                    <!-- <small class="text-muted">9 mins</small> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top"
+                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="assets/images/VegNoodles.jpg" data-holder-rendered="true"
+                                style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <p class="card-text">Veg Noodles -- $7.99</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                    </div>
+                                    <!-- <small class="text-muted">9 mins</small> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top"
+                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="assets/images/veg-manchurian.jpg" data-holder-rendered="true"
+                                style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <p class="card-text">Veg-Manchurian -- $8.99</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                    </div>
+                                    <!-- <small class="text-muted">9 mins</small> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top"
+                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="assets/images/GobiCauliflower.jpg" data-holder-rendered="true"
+                                style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <p class="card-text">Gobi-Cauliflower -- $7.99</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                    </div>
+                                    <!-- <small class="text-muted">9 mins</small> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top"
+                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="assets/images/SchezwanRice.jpg" data-holder-rendered="true"
+                                style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <p class="card-text">Schezwan Rice -- $8.99</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                    </div>
+                                    <!-- <small class="text-muted">9 mins</small> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top"
+                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="assets/images/ChineseBhel.jpg" data-holder-rendered="true"
+                                style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <p class="card-text">Chinese Bhel -- $ 9.99</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                    </div>
+                                    <!-- <small class="text-muted">9 mins</small> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-4 box-shadow">
+                            <img class="card-img-top"
+                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                alt="Thumbnail [100%x225]" src="assets/images/chicken-noodles.jpg" data-holder-rendered="true"
+                                style="height: 225px; width: 100%; display: block;">
+                            <div class="card-body">
+                                <p class="card-text">Chicken Noodles -- $10.99</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                    </div>
+                                    <!-- <small class="text-muted">9 mins</small> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                        <div class="col-md-4">
+                            <div class="card mb-4 box-shadow">
+                                <img class="card-img-top"
+                                    data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                    alt="Thumbnail [100%x225]" src="assets/images/ChickenLollipop.jpg" data-holder-rendered="true"
+                                    style="height: 225px; width: 100%; display: block;">
+                                <div class="card-body">
+                                    <p class="card-text">Chicken Lollipop -- $ 11.00</p>
+                    
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
                                         </div>
+                                        <!-- <small class="text-muted">9 mins</small> -->
                                     </div>
                                 </div>
                             </div>
-
-                </div>
-              
-                
+                        </div>
+                        
+                        <div class="col-md-4">
+                            <div class="card mb-4 box-shadow">
+                                <img class="card-img-top"
+                                    data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                    alt="Thumbnail [100%x225]" src="assets/images/chicken-fried-rice.jpg" data-holder-rendered="true"
+                                    style="height: 225px; width: 100%; display: block;">
+                                <div class="card-body">
+                                    <p class="card-text">Chicken Fried Rice -- $ 9.99</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                        </div>
+                                        <!-- <small class="text-muted">9 mins</small> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="card mb-4 box-shadow">
+                                <img class="card-img-top"
+                                    data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                    alt="Thumbnail [100%x225]" src="assets/images/Garlic Chicken.jpeg" data-holder-rendered="true"
+                                    style="height: 225px; width: 100%; display: block;">
+                                <div class="card-body">
+                                    <p class="card-text">Garlic Chicken -- $ 10.50</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                        </div>
+                                        <!-- <small class="text-muted">9 mins</small> -->
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     
             </div>
         </div>
