--- a/src/app/south-vendor/south-vendor.component.html
+++ b/src/app/south-vendor/south-vendor.component.html
@@ -16,237 +16,39 @@
     
         <div class="album py-5 bg-light">
             <div class="container">
-              
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4" *ngFor="let n of southVendors">
                         <div class="card mb-4 box-shadow">
                             <img class="card-img-top"
                                 data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]" src="assets/images/coffee.jpg" data-holder-rendered="true"
+                                alt="Thumbnail [100%x225]" src="{{n.image}}" data-holder-rendered="true"
                                 style="height: 225px; width: 100%; display: block;">
+
                             <div class="card-body">
-                                <p class="card-text">Filter Coffee -- $ 7.00</p>
-                
+                                <p class="card-text"><strong *ngIf="n!==editSouthItem">{{n.name}}</strong><span
+                                        style="float: right"><strong *ngIf="n!==editSouthItem">${{n.price}}</strong></span>
+                                </p>
+
                                 <div class="d-flex justify-content-between align-items-center">
+                                    <input *ngIf="n===editSouthItem" [(ngModel)]="n.name" type="text" (blur)="update()"
+                                        (keyup.enter)="update()">
+
+                                    <input *ngIf="n===editSouthItem" [(ngModel)]="n.price" type="number" (blur)="update()"
+                                        (keyup.enter)="update()">
+
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+                                        <button type="button" class="btn btn-sm btn-outline-warning" title="Edit Menu Item"
+                                            (click)="edit(n)">
+                                            Edit</button>
+                                        <button type="button" class="btn btn-sm btn-outline-danger" title="Delete Menu Item"
+                                            (click)="delete(n)">Delete</button>                                        
                                     </div>
-                                    <!-- <small class="text-muted">9 mins</small> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]" src="assets/images/arcot.jpg" data-holder-rendered="true"
-                                style="height: 225px; width: 100%; display: block;">
-                            <div class="card-body">
-                                <p class="card-text">Vasantha Neer -- $ 9.00</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                                    </div>
-                                    <!-- <small class="text-muted">9 mins</small> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]" src="assets/images/buttermilk.jpg" data-holder-rendered="true"
-                                style="height: 225px; width: 100%; display: block;">
-                            <div class="card-body">
-                                <p class="card-text">Buttermilk -- $ 7.50</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                                    </div>
-                                    <!-- <small class="text-muted">9 mins</small> -->
+
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]" src="assets/images/puttukadala.jpg" data-holder-rendered="true"
-                                style="height: 225px; width: 100%; display: block;">
-                            <div class="card-body">
-                                <p class="card-text">Puttu Kadala -- $7.99</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                                    </div>
-                                    <!-- <small class="text-muted">9 mins</small> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]" src="assets/images/vada.jpg" data-holder-rendered="true"
-                                style="height: 225px; width: 100%; display: block;">
-                            <div class="card-body">
-                                <p class="card-text">Vada -- $8.99</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                                    </div>
-                                    <!-- <small class="text-muted">9 mins</small> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]" src="assets/images/GheeDosa.jpg" data-holder-rendered="true"
-                                style="height: 225px; width: 100%; display: block;">
-                            <div class="card-body">
-                                <p class="card-text">Ghee Dosa -- $7.99</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                                    </div>
-                                    <!-- <small class="text-muted">9 mins</small> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]" src="assets/images/Uttapam.jpg" data-holder-rendered="true"
-                                style="height: 225px; width: 100%; display: block;">
-                            <div class="card-body">
-                                <p class="card-text">Uttapam -- $8.99</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                                    </div>
-                                    <!-- <small class="text-muted">9 mins</small> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]" src="assets/images/MixedVegtablesBajji.jpg" data-holder-rendered="true"
-                                style="height: 225px; width: 100%; display: block;">
-                            <div class="card-body">
-                                <p class="card-text">Mixed Vegtables Bajji -- $ 9.99</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                                    </div>
-                                    <!-- <small class="text-muted">9 mins</small> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]" src="assets/images/ChickenChettinad.jpg" data-holder-rendered="true"
-                                style="height: 225px; width: 100%; display: block;">
-                            <div class="card-body">
-                                <p class="card-text">Chicken Chettinad -- $10.99</p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                                    </div>
-                                    <!-- <small class="text-muted">9 mins</small> -->
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                        <div class="col-md-4">
-                            <div class="card mb-4 box-shadow">
-                                <img class="card-img-top"
-                                    data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                    alt="Thumbnail [100%x225]" src="assets/images/KeralaChickenRoast.jpg" data-holder-rendered="true"
-                                    style="height: 225px; width: 100%; display: block;">
-                                <div class="card-body">
-                                    <p class="card-text">Kerala Chicken Roast -- $ 11.00</p>
-                    
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                                        </div>
-                                        <!-- <small class="text-muted">9 mins</small> -->
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-4">
-                            <div class="card mb-4 box-shadow">
-                                <img class="card-img-top"
-                                    data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                    alt="Thumbnail [100%x225]" src="assets/images/BeefDryFry.jpg" data-holder-rendered="true"
-                                    style="height: 225px; width: 100%; display: block;">
-                                <div class="card-body">
-                                    <p class="card-text">Beef Dry Fry -- $ 9.99</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                                        </div>
-                                        <!-- <small class="text-muted">9 mins</small> -->
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="card mb-4 box-shadow">
-                                <img class="card-img-top"
-                                    data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                    alt="Thumbnail [100%x225]" src="assets/images/NaadanCrabMasala.jpg" data-holder-rendered="true"
-                                    style="height: 225px; width: 100%; display: block;">
-                                <div class="card-body">
-                                    <p class="card-text">Naadan Crab Masala -- $ 10.50</p>
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div class="btn-group">
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                                        </div>
-                                        <!-- <small class="text-muted">9 mins</small> -->
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    
             </div>
         </div>
-    
     </main>
