--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,106 +3,120 @@
                 <div class="container">
                         <h1 class="jumbotron-heading" style="color: white">Hexa Kitchen Menu</h1>
                         <h2 class="lead text-muted">Deliciousness Jumping into the Mouth...</h2>
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-=======
-                      
->>>>>>> 6c3baccd62e8ee20c1cdad29db0ed12faf13d8f2
-=======
-
->>>>>>> 928c39116d2c703fb1258e6f9e3b8ec218d4a983
                 </div>
         </section>
 
-        <div class="album py-5 bg-light" >
-                <div class="container" >
-<<<<<<< HEAD
+        <div class="album py-5 bg-light">
+                <div class="container">
+
                         <div class="row">
-=======
-                        <div class="row" >
->>>>>>> 6c3baccd62e8ee20c1cdad29db0ed12faf13d8f2
-                                <div class="col-md-4">
-                                        <div class="card mb-4 box-shadow">
 
-                                                <img class="card-img-top"
-                                                        data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                                        alt="Thumbnail [100%x225]" src="assets/images/chinese.gif"
-                                                        data-holder-rendered="true"
-                                                        style="height: 225px; width: 100%;">
-                                                <div class="card-body d-flex flex-column">
-                                                        <h2>Indo-Chinese</h2>
-                                                        <p class="card-text">
-                                                                        Indian Chinese cuisine or Sino-Indian cuisine is the  adaptation of Chinese seasoning and
-                                                                        cooking techniques to Indian tastes through a larger offering to also include vegetarian dishes.
-                                                                        The Indian-style Chinese cuisine is said to have been developed by the small Chinese community that has lived in Kolkata for over a century.
-                                                        </p>
-                                                        <div class="d-flex justify-content-between align-items-center">
-                                                                <div class="btn-group">
-                                                                        <button type="button"
-                                                                                class="btn btn-sm mt-auto btn-outline-secondary">View
-                                                                                More</button>
-                                                                        <!-- <button type="button"
+                                <div class="row">
+
+                                        <div class="col-md-4">
+                                                <div class="card mb-4 box-shadow">
+
+                                                        <img class="card-img-top"
+                                                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                                                alt="Thumbnail [100%x225]"
+                                                                src="assets/images/chinese.gif"
+                                                                data-holder-rendered="true"
+                                                                style="height: 225px; width: 100%;">
+                                                        <div class="card-body d-flex flex-column">
+                                                                <h2>Indo-Chinese</h2>
+                                                                <p class="card-text">
+                                                                        Indian Chinese cuisine or Sino-Indian cuisine is
+                                                                        the adaptation of Chinese seasoning and
+                                                                        cooking techniques to Indian tastes through a
+                                                                        larger offering to also include vegetarian
+                                                                        dishes.
+                                                                        The Indian-style Chinese cuisine is said to have
+                                                                        been developed by the small Chinese community
+                                                                        that has lived in Kolkata for over a century.
+                                                                </p>
+                                                                <div
+                                                                        class="d-flex justify-content-between align-items-center">
+                                                                        <div class="btn-group">
+                                                                                <button type="button"
+                                                                                        class="btn btn-sm mt-auto btn-info"
+                                                                                        routerLink="/IndoChinese">View
+                                                                                        More</button>
+                                                                                <!-- <button type="button"
                                                                                 class="btn btn-sm btn-outline-secondary">Edit</button> -->
+                                                                        </div>
+                                                                        <!-- <small class="text-muted">9 mins</small> -->
                                                                 </div>
-                                                                <!-- <small class="text-muted">9 mins</small> -->
                                                         </div>
                                                 </div>
                                         </div>
-                                </div>
-                                <div class="col-md-4">
-                                        <div class="card mb-4 box-shadow">
-                                                <img class="card-img-top"
-                                                        data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                                        alt="Thumbnail [100%x225]" src="assets/images/north.gif"
-                                                        data-holder-rendered="true"
-                                                        style="height: 225px; width: 100%;">
-                                                <div class="card-body d-flex flex-column">
-                                                        <h2>North Indian</h2>
-                                                        <p class="card-text">
-                                                                        North cuisine is a form of cuisine, from the region of Northern India which include cuisines of
-                                                                        Jammu and Kashmir, Punjab, Chandigarh, Haryana, Himachal Pradesh, Rajasthan, Uttarakhand, Delhi, Uttar Pradesh
-                                                                        and Bihar (Bhojpuri cuisine) as well as central regions like Madhya Pradesh.
-                                                        </p>
-                                                        <br>
-                                                        <div class="d-flex justify-content-between align-items-center">
-                                                                <div class="btn-group">
-                                                                        <button type="button"
-                                                                                class="btn btn-sm mt-auto btn-outline-secondary">View
-                                                                                More</button>
-                                                                        <!-- <button type="button"
+                                        <div class="col-md-4">
+                                                <div class="card mb-4 box-shadow">
+                                                        <img class="card-img-top"
+                                                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                                                alt="Thumbnail [100%x225]" src="assets/images/north.gif"
+                                                                data-holder-rendered="true"
+                                                                style="height: 225px; width: 100%;">
+                                                        <div class="card-body d-flex flex-column">
+                                                                <h2>North Indian</h2>
+                                                                <p class="card-text">
+                                                                        North cuisine is a form of cuisine, from the
+                                                                        region of Northern India which include cuisines
+                                                                        of
+                                                                        Jammu and Kashmir, Punjab, Chandigarh, Haryana,
+                                                                        Himachal Pradesh, Rajasthan, Uttarakhand, Delhi,
+                                                                        Uttar Pradesh
+                                                                        and Bihar (Bhojpuri cuisine) as well as central
+                                                                        regions like Madhya Pradesh.
+                                                                </p>
+                                                                <br>
+                                                                <div
+                                                                        class="d-flex justify-content-between align-items-center">
+                                                                        <div class="btn-group">
+                                                                                <button type="button"
+                                                                                        class="btn btn-sm mt-auto btn-info"
+                                                                                        routerLink="/NorthIndian">View
+                                                                                        More</button>
+                                                                                <!-- <button type="button"
                                                                                 class="btn btn-sm btn-outline-secondary">Edit</button> -->
+                                                                        </div>
+                                                                        <!-- <small class="text-muted">9 mins</small> -->
                                                                 </div>
-                                                                <!-- <small class="text-muted">9 mins</small> -->
                                                         </div>
                                                 </div>
                                         </div>
-                                </div>
-                                <div class="col-md-4">
-                                        <div class="card mb-4 box-shadow">
+                                        <div class="col-md-4">
+                                                <div class="card mb-4 box-shadow">
 
-                                                <img class="card-img-top"
-                                                        data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                                        alt="Thumbnail [100%x225]" src="assets/images/south.gif"
-                                                        data-holder-rendered="true"
-                                                        style="height: 225px; width: 100%;">
-                                                <div class="card-body d-flex flex-column">
-                                                        <h2>South Indian</h2>
-                                                        <p class="card-text">
-                                                                South Indian cuisine includes the cuisines of the five southern states of India—Andhra Pradesh, Karnataka, Kerala, Tamil Nadu and Telangana—and the union territories of Lakshadweep, Pondicherry, and the Andaman and Nicobar Islands.
+                                                        <img class="card-img-top"
+                                                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                                                                alt="Thumbnail [100%x225]" src="assets/images/south.gif"
+                                                                data-holder-rendered="true"
+                                                                style="height: 225px; width: 100%;">
+                                                        <div class="card-body d-flex flex-column">
+                                                                <h2>South Indian</h2>
+                                                                <p class="card-text">
+                                                                        South Indian cuisine includes the cuisines of
+                                                                        the five southern states of India—Andhra
+                                                                        Pradesh, Karnataka, Kerala, Tamil Nadu and
+                                                                        Telangana—and the union territories of
+                                                                        Lakshadweep, Pondicherry, and the Andaman and
+                                                                        Nicobar Islands.
 
-                                                        </p>
-                                                        <br>
-                                                        <br>
-                                                        <div class="d-flex justify-content-between align-items-center">
-                                                                <div class="btn-group">
-                                                                        <button type="button"
-                                                                                class="btn btn-sm mt-auto btn-outline-secondary">View
-                                                                                More</button>
-                                                                        <!-- <button type="button"
+                                                                </p>
+                                                                <br>
+                                                                <br>
+                                                                <div
+                                                                        class="d-flex justify-content-between align-items-center">
+                                                                        <div class="btn-group">
+                                                                                <button type="button"
+                                                                                        class="btn btn-sm mt-auto btn-info"
+                                                                                        routerLink="/SouthIndian">View
+                                                                                        More</button>
+                                                                                <!-- <button type="button"
                                                                                 class="btn btn-sm btn-outline-secondary">Edit</button> -->
+                                                                        </div>
+                                                                        <!-- <small class="text-muted">9 mins</small> -->
                                                                 </div>
-                                                                <!-- <small class="text-muted">9 mins</small> -->
                                                         </div>
                                                 </div>
                                         </div>
@@ -110,5 +124,4 @@
                         </div>
                 </div>
         </div>
-
 </main>
