--- a/src/app/south-vendor/south-vendor.component.html
+++ b/src/app/south-vendor/south-vendor.component.html
@@ -1,54 +1,105 @@
 <main role="main">
 
-        <section class="jumbotron text-center">
-            <div class="container">
-                <h1 class="jumbotron-heading">Your Menu</h1>
-                <p class="lead text-muted">South Indian cuisine includes the cuisines of the 
-                    five southern states of India—Andhra Pradesh, Karnataka, Kerala, Tamil Nadu
-                     and Telangana—and the union territories of Lakshadweep, Pondicherry, and the 
-                     Andaman and Nicobar Islands.</p>
-                <p>
-                    <a href="#" class="btn btn-primary my-2">Add More Items</a>
-    
-                </p>
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1 class="jumbotron-heading">Your Menu</h1>
+            <p class="lead text-muted">South Indian cuisine includes the cuisines of the
+                five southern states of India—Andhra Pradesh, Karnataka, Kerala, Tamil Nadu
+                and Telangana—and the union territories of Lakshadweep, Pondicherry, and the
+                Andaman and Nicobar Islands.</p>
+            <button type="button" class="btn btn-primary my-2" data-toggle="modal" data-target="#myModal">Add
+                Item</button>
+        </div>
+    </section>
+
+    <!-- Add Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Add Menu Item</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form #userForm="ngForm" (submit)="add(userForm)">
+                        <div class="form-group">
+                            <label>Item Name: </label>
+                            <input type="text" required #itemName="ngModel" class="form-control" style="width:200px"
+                                ngModel name="name"
+                                [ngClass]="{ 'is-invalid': userForm.submitted && itemName.invalid }">
+                            <div *ngIf="userForm.submitted && itemName.invalid" class="invalid-feedback">
+                                <div *ngIf="itemName.errors.required">Item Name is required</div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label>Item Price :</label>
+                            <input type="number" required #itemPrice="ngModel" class="form-control" style="width:200px"
+                                ngModel name="price"
+                                [ngClass]="{ 'is-invalid': userForm.submitted && itemPrice.invalid }">
+                            <div *ngIf="userForm.submitted && itemPrice.invalid" class="invalid-feedback">
+                                <div *ngIf="itemPrice.errors.required">Item Price is required</div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <!-- <img                                 
+                            class="card-img-top"
+                            data-src="holder.js/100px250?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                            alt="Thumbnail [100%x250]" data-holder-rendered="true"
+                            style="height: 250px; width: 100%; display: block;"                            
+                            class="form-control" #itemImage="ngModel" ngModel name="image" src="assets/images/Restaurant.jpg">   -->
+                            <input type="image" src="assets/images/Restaurant.jpg" class="card-img-top form-control"
+                                style="height: 250px; width: 100%; display: block;" #itemImage="ngModel" ngModel
+                                name="image">
+                        </div>
+                        <button type="submit" class="btn btn-success">Add Item</button>
+
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
             </div>
-        </section>
-    
-        <div class="album py-5 bg-light">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4" *ngFor="let n of southVendors">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]" src="{{n.image}}" data-holder-rendered="true"
-                                style="height: 250px; width: 100%; display: block;">
+        </div>
+    </div>
 
-                            <div class="card-body">
-                                <p class="card-text"><strong *ngIf="n!==editSouthItem">{{n.name}}</strong><span
-                                        style="float: right"><strong *ngIf="n!==editSouthItem">${{n.price}}</strong></span>
-                                </p>
+    <div class="album py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4" *ngFor="let n of southVendors">
+                    <div class="card mb-4 box-shadow">
+                        <img class="card-img-top"
+                            data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                            alt="Thumbnail [100%x225]" src="{{n.image}}" data-holder-rendered="true"
+                            style="height: 250px; width: 100%; display: block;">
 
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <input *ngIf="n===editSouthItem" [(ngModel)]="n.name" type="text" (blur)="update()"
-                                        (keyup.enter)="update()">
+                        <div class="card-body">
+                            <p class="card-text"><strong *ngIf="n!==editSouthItem">{{n.name}}</strong><span
+                                    style="float: right"><strong *ngIf="n!==editSouthItem">${{n.price}}</strong></span>
+                            </p>
 
-                                    <input *ngIf="n===editSouthItem" [(ngModel)]="n.price" type="number" (blur)="update()"
-                                        (keyup.enter)="update()">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <input *ngIf="n===editSouthItem" [(ngModel)]="n.name" type="text" (blur)="update()"
+                                    (keyup.enter)="update()">
 
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-warning" title="Edit Menu Item"
-                                            (click)="edit(n)">
-                                            Edit</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" title="Delete Menu Item"
-                                            (click)="delete(n)">Delete</button>                                        
-                                    </div>
+                                <input *ngIf="n===editSouthItem" [(ngModel)]="n.price" type="number" (blur)="update()"
+                                    (keyup.enter)="update()">
 
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-warning" title="Edit Menu Item"
+                                        (click)="edit(n)">
+                                        Edit</button>
+                                    <button type="button" class="btn btn-sm btn-outline-danger" title="Delete Menu Item"
+                                        (click)="delete(n)">Delete</button>
                                 </div>
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </main>
+    </div>
+</main>
