--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,15 +31,19 @@
   </div>
 </nav> -->
 
-
-
 <header>
   <div class="bg-dark collapse" id="navbarHeader">
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-md-7 py-4">
           <h4 class="text-white">About</h4>
-          <p class="text-muted">Hexa Kitchen offers ordering Menu by Employee.</p>
+          <p class="text-muted">Hexa Kitchen offers ordering different cuisines from North, South and Indo-Chinese
+            Delicacies.
+            Employee can login and order from different types of Drinks, Appetizers and Main course.
+          </p>
+          <button class="nav-item btn btn-lg">
+              <a class="nav-link" routerLink="/Login">Login</a>
+            </button>
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4 class="text-white">Contact</h4>
@@ -57,23 +61,21 @@
       <a href="#" class="navbar-brand d-flex align-items-center">
 
         <a class="navbar-brand" routerLink="">
-            <img src="assets/images/Restaurant.jpg" alt=""> 
-            <strong routerLink="">Hexa Kitchen</strong>
+          <img src="assets/images/Restaurant.jpg" alt="">
+          <strong routerLink="">Hexa Kitchen</strong>
         </a>
-        
+
       </a>
-      <ul class="ml-auto">        
-              <button class="nav-item btn btn-default">
-                  <a class="nav-link" routerLink="/Login">Login</a>
-              </button>
-            &nbsp;
-           <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader"
-            aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        
+      <ul class="ml-auto">
+        <!-- <button class="nav-item btn btn-default">
+          <a class="nav-link" routerLink="/Login">Login</a>
+        </button> -->
+        &nbsp;
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader"
+          aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
       </ul>
-      
     </div>
   </div>
 </header>
