--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,9 @@
 <main role="main">
+                <!-- <button class="nav-item btn btn-dark" style="float: right">
+                                <a class="nav-link" routerLink="/Login">Login</a>
+                              </button> -->
         <section class="jumbotron text-center" id="kitchen">
+                       
                 <div class="container">
                         <h1 class="jumbotron-heading" style="color: white">Hexa Kitchen Menu</h1>
                         <h2 class="lead text-muted">Deliciousness Jumping into the Mouth...</h2>
@@ -8,14 +12,10 @@
 
         <div class="album py-5 bg-light">
                 <div class="container">
-
                         <div class="row">
-
                                 <div class="row">
-
                                         <div class="col-md-4">
                                                 <div class="card mb-4 box-shadow">
-
                                                         <img class="card-img-top"
                                                                 data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
                                                                 alt="Thumbnail [100%x225]"
@@ -39,7 +39,7 @@
                                                                         <div class="btn-group">
                                                                                 <button type="button"
                                                                                         class="btn btn-sm mt-auto btn-info"
-                                                                                        routerLink="/IndoChinese">View
+                                                                                        routerLink="/Login">View
                                                                                         More</button>
                                                                                 <!-- <button type="button"
                                                                                 class="btn btn-sm btn-outline-secondary">Edit</button> -->
@@ -74,7 +74,7 @@
                                                                         <div class="btn-group">
                                                                                 <button type="button"
                                                                                         class="btn btn-sm mt-auto btn-info"
-                                                                                        routerLink="/NorthIndian">View
+                                                                                        routerLink="/Login">View
                                                                                         More</button>
                                                                                 <!-- <button type="button"
                                                                                 class="btn btn-sm btn-outline-secondary">Edit</button> -->
@@ -110,7 +110,7 @@
                                                                         <div class="btn-group">
                                                                                 <button type="button"
                                                                                         class="btn btn-sm mt-auto btn-info"
-                                                                                        routerLink="/SouthIndian">View
+                                                                                        routerLink="/Login">View
                                                                                         More</button>
                                                                                 <!-- <button type="button"
                                                                                 class="btn btn-sm btn-outline-secondary">Edit</button> -->
