--- a/src/app/indo-chinses-vendor/indo-chinses-vendor.component.css
+++ b/src/app/indo-chinses-vendor/indo-chinses-vendor.component.css
@@ -4,6 +4,11 @@
     width:200px ;
     height: 150px;
     
+      border-radius: 50%;
+  /* width: 150px;
+  height: 150px;
+  */
+    
 }
 
 
@@ -21,3 +26,19 @@
 {
     text-decoration-style: dashed;
 }
+
+/* [1] The container */
+.img-hover-zoom {
+    height: 300px; /* [1.1] Set it as per your need */
+    overflow: hidden; /* [1.2] Hide the overflowing of child elements */
+  }
+  
+  /* [2] Transition property for smooth transformation of images */
+  .img-hover-zoom img {
+    transition: transform .5s ease;
+  }
+  
+  /* [3] Finally, transforming the image when container gets hovered */
+  .img-hover-zoom:hover img {
+    transform: scale(1.5);
+  }
