--- a/src/app/indo-chinses-vendor/indo-chinses-vendor.component.html
+++ b/src/app/indo-chinses-vendor/indo-chinses-vendor.component.html
@@ -1,17 +1,27 @@
 <main role="main">
+      
+        <button class="btn btn-outline-dark btn-lg" style="float: right" routerLink=''>Logout</button>
 
-        <section class="jumbotron text-center" >
-            <div class="container">
-                <h1 class="jumbotron-heading">Your Menu</h1>
-                <p class="lead text-muted">Indian Chinese cuisine or Sino-Indian cuisine is the adaptation of Chinese
-                    seasoning and cooking techniques to Indian tastes through a larger offering to also include vegetarian dishes.
-                    The Indian-style Chinese cuisine is said to have been developed by the small Chinese community that has
-                    lived in Kolkata for over a century.</p>
-                <button type="button" class="btn btn-primary my-2" data-toggle="modal" data-target="#myModal">Add Item</button>                
-            </div>
-        </section>
+    <section class="jumbotron text-center">
+           
+        <div class="container">
+               
+            <h1 class="jumbotron-heading">Your Menu</h1>
+            <p class="lead text-muted">Indian Chinese cuisine or Sino-Indian cuisine is the adaptation of Chinese
+                seasoning and cooking techniques to Indian tastes through a larger offering to also include vegetarian
+                dishes.
+                The Indian-style Chinese cuisine is said to have been developed by the small Chinese community that has
+                lived in Kolkata for over a century.</p>
+            <button type="button" class="btn btn-primary my-2" data-toggle="modal" data-target="#myModal">Add
+                Item</button>
+                &nbsp;   &nbsp; &nbsp; &nbsp; &nbsp;
+                <button type="button" class="btn btn-primary my-2" routerLink="/OrderDetails"> View History</button>
+                &nbsp;   &nbsp; &nbsp; &nbsp; &nbsp;
+                <button type="button" class="btn btn-primary my-2" routerLink="/PendingOrder"> Pending Requests</button>
+        </div>
+    </section>
 
-        <!-- Add Modal -->
+    <!-- Add Modal -->
     <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
             <!-- Modal content-->
@@ -26,9 +36,11 @@
                             <label>Item Name: </label>
                             <input type="text" required #itemName="ngModel" class="form-control" style="width:200px"
                                 ngModel name="name"
-                                [ngClass]="{ 'is-invalid': userForm.submitted && itemName.invalid }">
-                            <div *ngIf="userForm.submitted && itemName.invalid" class="invalid-feedback">
-                                <div *ngIf="itemName.errors.required">Item Name is required</div>
+                                [ngClass]="{ 'is-invalid': userForm.submitted && itemName.invalid }">                            
+                            <div *ngIf="itemName.invalid && (itemName.dirty || itemName.touched)" class="alert alert-danger">
+                                    <div *ngIf="itemName.errors.required">
+                                        Item Name is required
+                                    </div>                                                
                             </div>
                         </div>
 
@@ -36,9 +48,11 @@
                             <label>Item Price :</label>
                             <input type="number" required #itemPrice="ngModel" class="form-control" style="width:200px"
                                 ngModel name="price"
-                                [ngClass]="{ 'is-invalid': userForm.submitted && itemPrice.invalid }">
-                            <div *ngIf="userForm.submitted && itemPrice.invalid" class="invalid-feedback">
-                                <div *ngIf="itemPrice.errors.required">Item Price is required</div>
+                                [ngClass]="{ 'is-invalid': userForm.submitted && itemPrice.invalid }">                           
+                            <div *ngIf="itemPrice.invalid && (itemPrice.dirty || itemPrice.touched)" class="alert alert-danger">
+                                    <div *ngIf="itemPrice.errors.required">
+                                        Item Price is required
+                                    </div>                                                
                             </div>
                         </div>
 
@@ -53,7 +67,8 @@
                                 style="height: 250px; width: 100%; display: block;" #itemImage="ngModel" ngModel
                                 name="image">
                         </div>
-                        <button type="submit" class="btn btn-success">Add Item</button>
+                        <button type="submit" [disabled]="userForm.form.invalid" class="btn btn-success">Add
+                            Item</button>
 
                     </form>
                 </div>
@@ -63,40 +78,40 @@
             </div>
         </div>
     </div>
-    
-        <div class="album py-5 bg-light">
-            <div class="container">
-              
-                <div class="row">
-                    <div class="col-md-4" *ngFor="let n of indoVendors">
-                        <div class="card mb-4 box-shadow">
-                            <img class="card-img-top"
-                                data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                alt="Thumbnail [100%x225]" src="{{n.image}}" data-holder-rendered="true"
-                                style="height: 250px; width: 100%; display: block;">
-                            <div class="card-body">
-                                <p class="card-text"><strong *ngIf="n!==editIndoItem">{{n.name}}</strong><span
-                                        style="float: right"><strong *ngIf="n!==editIndoItem">${{n.price}}</strong></span>
-                                </p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <input *ngIf="n===editIndoItem" [(ngModel)]="n.name" type="text" (blur)="update()"
-                                        (keyup.enter)="update()">
-                                    <input *ngIf="n===editIndoItem" [(ngModel)]="n.price" type="text" (blur)="update()"
-                                        (keyup.enter)="update()">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-warning" title="Edit Menu Item"
-                                            (click)="edit(n)">
-                                            Edit</button>
-                                        <button type="button" class="btn btn-sm btn-outline-danger" title="Delete Menu Item"
-                                            (click)="delete(n)">Delete</button>                                        
-                                    </div>
+
+    <div class="album py-5 bg-light">
+        <div class="container">
+            <h5 style="text-align: center">My Account Balance: $300</h5><br>
+                
+            <div class="row">
+                
+                <div class="col-md-4" *ngFor="let n of indoVendors">
+                    <div class="card mb-4 box-shadow img-hover-zoom">
+                        <img class="card-img-top"
+                            data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
+                            alt="Thumbnail [100%x225]" src="{{n.image}}" data-holder-rendered="true"
+                            style="height: 190px; width: 100%; display: block;">
+                        <div class="card-body">
+                            <p class="card-text"><strong *ngIf="n!==editIndoItem">{{n.name}}</strong><span
+                                    style="float: right"><strong *ngIf="n!==editIndoItem">${{n.price}}</strong></span>
+                            </p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <input *ngIf="n===editIndoItem" [(ngModel)]="n.name" type="text" (blur)="update()"
+                                    (keyup.enter)="update()">
+                                <input *ngIf="n===editIndoItem" [(ngModel)]="n.price" type="text" (blur)="update()"
+                                    (keyup.enter)="update()">
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-sm btn-outline-warning" title="Edit Menu Item"
+                                        (click)="edit(n)">
+                                        Edit</button>
+                                    <button type="button" class="btn btn-sm btn-outline-danger" title="Delete Menu Item"
+                                        (click)="delete(n)">Delete</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                    
             </div>
         </div>
-    
-    </main>
+    </div>
+</main>
